fix so span is visible

--- a/sokoban/src/components/LevelBox.css
+++ b/sokoban/src/components/LevelBox.css
@@ -14,6 +14,9 @@
   color: transparent;
   text-decoration: none;
 }
+.link-to-lvl span {
+  color: #000;
+}
 .level-box:hover {
   box-shadow: #307DA4 0px 7px 29px 0px;
 }
